# distributed-systems

./: .gitignore  README.md
01-sockets/src/: Client.java  ClientHandler.java  ClientListener.java  ClientThread.java  Server.java
01-sockets/src/sockets/client/: Client.java  TCPListener.java  UDPListener.java
01-sockets/src/sockets/server/: Pair.java  Server.java  TCPHandler.java  UDPHandler.java
02-REST/: pom.xml
02-REST/src/main/java/distributed/systems/rest/: AvailableCurrencies.java  (+3 more)
02-REST/web/: index.html  index.jsp
02-REST/web/WEB-INF/: web.xml
03-rabbitmq/src/rabbitmq/connection/: ConnectionHandler.java
03-rabbitmq/src/rabbitmq/model/: Message.java  MessageType.java  OrderType.java
03-rabbitmq/src/rabbitmq/queue/: MessageReceiver.java  MessageSender.java
03-rabbitmq/src/rabbitmq/users/: Administrator.java  Agency.java  Carrier.java
03-rabbitmq/src/rabbitmq/utils/: Message.java  MessageReceiver.java  MessageSender.java  OrderType.java
04-middleware/4.1-grpc/grpc-client/: client.py  requirements.txt
04-middleware/4.1-grpc/grpc-server/src/middleware/generators/: CulturalEventGenerator.java  WeatherForecastGenerator.java
04-middleware/4.1-grpc/grpc-server/src/middleware/server/: NotificationServer.java
04-middleware/4.1-grpc/proto/: event_notification.proto  generate_proto_output.sh
04-middleware/4.2-thrift/thrift/: generate_thrift_output.sh  intelligent_house.thrift
04-middleware/4.2-thrift/thrift-client/: CMakeLists.txt  main.cpp
05-zookeeper/: external.sh  pom.xml
06-akka/: pom.xml
06-akka/src/main/resources/: application.conf
(+28 files in other folders)
